--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.12",
+    "@tanstack/react-router": "^1.94.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tanstack/eslint-plugin-query": "^5.62.9",
+    "@tanstack/react-query-devtools": "^5.62.12",
+    "@tanstack/router-devtools": "^1.94.1",
+    "@tanstack/router-plugin": "^1.94.1",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
