--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.12",
     "@tanstack/react-router": "^1.94.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
